数组的方法练习

--- a/myExample.html
+++ b/myExample.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <script>
-    //    将一个对象的部分属性，赋值给另一个数组的每个对象
+    // 目标：将一个对象的部分属性，赋值给另一个数组的每个对象
     // 初始化数据举例
+    // 这个是我们将要使用的对象，需要使用这个对象的部分属性
     let oldObj={
         aa:1,
         ab:'haha',
@@ -20,6 +21,7 @@
         pa5:'pa5',
         pa6:'pa6',
     }
+    // 这个是我们将要建立的数组的长度
      let arrLength=6;
 
     // 方法一
